refactor(tagger): modernize URL and encoding APIs